--- a/landing-pages/sug.yml
+++ b/landing-pages/sug.yml
@@ -11,7 +11,7 @@ partnerLogo: "sug"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#FE9A01",
     page: "#fff",
 
     navbarBg: "#FE9A01", # If nothing present, page color will be used
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#000000", text: "#FE9A01" },
+    iconSection: { icon: "#000000", bg: "##FE9A01" },
+    darkSection: { bg: "#000000", button: { bg: "#000000", text: "#FE9A01" } },
   }
 
 # Content
