--- a/landing-pages/sug-capital.yml
+++ b/landing-pages/sug-capital.yml
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Revenue Based Finance", secondLine: "For Amazon Businesses" },
 
-    description: As growth experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. SUG Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $10M.",
+    description: "As growth experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. SUG Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $10M.",
 
     button: "Get funded",
   }
