--- a/landing-pages/sug-capital.yml
+++ b/landing-pages/sug-capital.yml
@@ -25,8 +25,8 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    button: { bg: "#000000", text: "#FE9A01" },
+    iconSection: { icon: "#FE9A01", bg: "#000000" },
     darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
