--- a/landing-pages/sug-capital.yml
+++ b/landing-pages/sug-capital.yml
@@ -23,7 +23,7 @@ colors: {
         heading: "#000000",
         inverseHeading: "#FE9A01",
         body: "#1C3654",
-        inverseBody: "#FE9A01",
+        inverseBody: "#ffffff",
       },
     button: { bg: "#FE9A01", text: "#000000" },
     iconSection: { icon: "#000000", bg: "#FE9A01" },
