--- a/landing-pages/sug-capital.yml
+++ b/landing-pages/sug-capital.yml
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#ffffff",
       },
-    button: { bg: "#FE9A01", text: "#000000" },
+    button: { bg: "#FE9A01", text: "#FFFFFF" },
     iconSection: { icon: "#000000", bg: "#FE9A01" },
-    darkSection: { bg: "#000000", button: { bg: "#FE9A01", text: "#000000" } },
+    darkSection: { bg: "#000000", button: { bg: "#FE9A01", text: "#FFFFFF" } },
   }
 
 # Content
