--- a/landing-pages/omnipack-outfund.yml
+++ b/landing-pages/omnipack-outfund.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#E53B46" },
+    card: { bg: "#111335", font: "#F2F6FA", elements: "#E53B46" },
     font:
       {
         heading: "#0C2542",
@@ -25,9 +25,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#111335", text: "#fff" },
+    iconSection: { icon: "#111335", bg: "#F2F6FA" },
+    darkSection: { bg: "#111335", button: { bg: "#E53B46", text: "#FFF" } },
   }
 
 # Content
