--- a/landing-pages/omnipack-outfund.yml
+++ b/landing-pages/omnipack-outfund.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "omnipack"
+partnerLogo: "omnipack1"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
