--- a/landing-pages/omnipack-outfund.yml
+++ b/landing-pages/omnipack-outfund.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "omnipack1"
-partnerLogoCard: "outfund-logo-light"
+partnerLogoCard: "omnipack1"
 
 colors: {
     theme: "#E53B46",
