--- a/landing-pages/omnipack-outfund.yml
+++ b/landing-pages/omnipack-outfund.yml
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#111335", font: "#F2F6FA", elements: "#E53B46" },
+    card: { bg: "#F2F6FA", font: "#111335", elements: "#E53B46" },
     font:
       {
         heading: "#111335",
