--- a/landing-pages/omnipack-outfund.yml
+++ b/landing-pages/omnipack-outfund.yml
@@ -8,7 +8,7 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "omnipack1"
-partnerLogoCard: "omnipack1"
+partnerLogoCard: "outfund-logo-light"
 
 colors: {
     theme: "#E53B46",
@@ -17,7 +17,7 @@ colors: {
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#C0C0C0", font: "#111335", elements: "#E53B46" },
+    card: { bg: "#111335", font: "#FFF", elements: "#E53B46" },
     font:
       {
         heading: "#111335",
