--- a/landing-pages/fpgroup.yml
+++ b/landing-pages/fpgroup.yml
@@ -34,7 +34,7 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Online Businesses in Ireland & Europe" },
+      { firstLine: "Revenue Based Finance", secondLine: "For eCommerce Businesses in Ireland & Europe" },
 
     description: "As financial planning experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from £10K to £10M.",
 
