--- a/landing-pages/fintech-circle.yml
+++ b/landing-pages/fintech-circle.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "fintech-circle.svg"
-partnerLogoCard: "fintech-circle.svg"
+partnerLogo: "fintech-circle"
+partnerLogoCard: "fintech-circle"
 
 colors: {
     theme: "#000000",
