--- a/landing-pages/fintech-circle.yml
+++ b/landing-pages/fintech-circle.yml
@@ -8,7 +8,8 @@ published: true
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
 partnerLogo: "fintech-circle"
-partnerLogoCard: "fintech-circle"
+partnerLogoCard: "fintech-circle-card"
+logoHeight: "64px"
 
 colors: {
     theme: "#000000",
