--- a/landing-pages/fintech-circle.yml
+++ b/landing-pages/fintech-circle.yml
@@ -40,7 +40,7 @@ first:
         secondLine: "For Your Business",
       },
 
-    description: "FINTECH Circle and OutFund are excited to work together to help the best fintech startups and scaleups get access to growth capital. While FINTECH Circle's angel network provides early-stage startup capital in the form of equity investments, OutFund provides revenue based financing. This means that Outfund uses your monthly revenue as a guide and provides up-front capital within 24 hours in exchange for a small percentage of future earnings. As a startup you repay OutFund as sales come. 
+    description: "FINTECH Circle and OutFund are excited to work together to help the best fintech startups and scaleups get access to growth capital. While FINTECH Circle's angel network provides early-stage startup capital in the form of equity investments, OutFund provides revenue based financing. 
 ",
 
     button: "Get funded",
