--- a/landing-pages/ravio.yml
+++ b/landing-pages/ravio.yml
@@ -1,4 +1,4 @@
-# Slug value will be used for URL, eg: www.revenue.finance/template
+# Slug value will be used for URL, eg: www.revenue.finance/ravio
 # As a convention, name the file the same as the slug, eg: template.yml
 slug: template-active
 
