--- a/landing-pages/payfit.yml
+++ b/landing-pages/payfit.yml
@@ -1,23 +1,24 @@
 # Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
-slug: www.revenue.finance/payfit.yml
+slug: payfit.yml
 
 # Set this to true when you want to publish the page
 published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "outfund-logo-dark"
-partnerLogoCard: "outfund-logo-light"
+partnerLogo: ""
+partnerLogoCard: ""
+logoHeight: "64px"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#2E8DE4",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
+    card: { bg: "#000000", font: "#F2F6FA", elements: "#000000" },
     font:
       {
         heading: "#0C2542",
@@ -25,18 +26,22 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#000000", text: "#fff" },
+    iconSection: { icon: "#000000", bg: "#F2F6FA" },
+    darkSection: { bg: "#000000", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For ___ Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Your Business",
+      },
 
-    description: "As ___ experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from £10K to £10M.",
+    description: "FINTECH Circle and OutFund are excited to work together to help the best fintech startups and scaleups get access to growth capital. While FINTECH Circle's angel network provides early-stage startup capital in the form of equity investments, OutFund provides revenue based financing. 
+",
 
     button: "Get funded",
   }
@@ -81,16 +86,16 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Powered by Outfund, ___ Capital/Finance can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "___ Finance offers a new way to help you fund your ___ brand.",
+    description: "Outfund can help your business to achieve its growth potential. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "",
   }
 
 sixth:
   {
-    title: "We fund online businesses who:",
+    title: "We fund businesses who:",
     list:
       [
-        "Sell products on ___",
+        "",
         "Have been trading for 6 months +",
         "Earn £10K+ monthly revenue",
       ],
