--- a/landing-pages/financialplanner-ie.yml
+++ b/landing-pages/financialplanner-ie.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "fpgroupoutfund"
+partnerLogo: "fpg"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Online Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Online Businesses",
+      },
 
     description: "As financial planning experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from £10K to £10M.",
 
