--- a/landing-pages/digital-paths.yml
+++ b/landing-pages/digital-paths.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "Logo_icon_black_on_white"
-partnerLogoCard: "Logo_icon_black_on_white"
+partnerLogo: "Logo_black-background 2"
+partnerLogoCard: ""
 
 colors: {
     theme: "#015e74",
@@ -90,7 +90,6 @@ sixth:
     title: "We fund online businesses who:",
     list:
       [
-        "Sell products on ___",
         "Have been trading for 6 months +",
         "Earn $20K+ monthly revenue",
       ],
