--- a/landing-pages/digital-paths.yml
+++ b/landing-pages/digital-paths.yml
@@ -7,7 +7,7 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "digitalpathswhite3"
+partnerLogo: "digitalpathswhite2"
 partnerLogoCard: ""
 
 colors: {
@@ -36,7 +36,7 @@ first:
     title:
       { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
 
-    description: "As business strategy experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. ___ Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $3M.",
+    description: "As business strategy experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Digital Paths Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $10M.",
 
     button: "Get funded",
   }
