--- a/landing-pages/digital-paths.yml
+++ b/landing-pages/digital-paths.yml
@@ -82,7 +82,7 @@ fifth:
   {
     title: "What We Do",
     description: "Powered by Outfund, Digital Paths Capital can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "Digtal Paths Finance offers a new way to help you fund your growing brand.",
+    statement: "Digtal Paths Finance offers a new way to help you fuel your growing brand.",
   }
 
 sixth:
