--- a/landing-pages/digital-paths.yml
+++ b/landing-pages/digital-paths.yml
@@ -3,7 +3,7 @@
 slug: digital-paths
 
 # Set this to true when you want to publish the page
-published: true
+published: false
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
