--- a/landing-pages/digital-paths.yml
+++ b/landing-pages/digital-paths.yml
@@ -7,8 +7,8 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "digitalpathswhite3"
-partnerLogoCard: ""
+partnerLogo: "digital-paths"
+partnerLogoCard: "digital-paths-card"
 
 colors: {
     theme: "#015e74",
@@ -34,7 +34,10 @@ colors: {
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Growing Businesses" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For Growing Businesses",
+      },
 
     description: "As business strategy experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Digital Paths Capital (powered by Outfund) offers a new way to help you fund your online business with funding from $10K to $10M.",
 
@@ -88,10 +91,6 @@ fifth:
 sixth:
   {
     title: "We fund online businesses who:",
-    list:
-      [
-        "Have been trading for 6 months +",
-        "Earn $20K+ monthly revenue",
-      ],
+    list: ["Have been trading for 6 months +", "Earn $20K+ monthly revenue"],
     button: "Get funded",
   }
