--- a/landing-pages/fintech-circle.yml
+++ b/landing-pages/fintech-circle.yml
@@ -40,7 +40,7 @@ first:
         secondLine: "For Your Business",
       },
 
-    description: "FINTECH Circle and OutFund are excited to work together to help the best fintech startups and scaleups get access to growth capital. While FINTECH Circle's angel network provides early-stage startup capital in the form of equity investments, OutFund provides revenue based financing. 
+    description: "We're excited to partner with Outfund to offer clients fast and flexible funding to scale their businesses. 
 ",
 
     button: "Get funded",
@@ -80,24 +80,5 @@ fourth:
   {
     title: "Repay On Your Terms",
     description: "Repayments are automatically made from a pre-agreed percentage of your revenue, so you can focus 100% on your business.",
-    button: "Get funded",
-  }
-
-fifth:
-  {
-    title: "What We Do",
-    description: "Outfund can help your business to achieve its growth potential. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "",
-  }
-
-sixth:
-  {
-    title: "We fund businesses who:",
-    list:
-      [
-        "",
-        "Have been trading for 6 months +",
-        "Earn £10K+ monthly revenue",
-      ],
     button: "Get funded",
   }
