--- a/landing-pages/insight-scaling.yml
+++ b/landing-pages/insight-scaling.yml
@@ -40,7 +40,7 @@ first:
         secondLine: "For Your Business",
       },
 
-    description: "FINTECH Circle and OutFund are excited to work together to help the best fintech startups and scaleups get access to growth capital. While FINTECH Circle's angel network provides early-stage startup capital in the form of equity investments, OutFund provides revenue based financing. 
+    description: "We're excited to partner with Outfund to offer clients fast and flexible funding. 
 ",
 
     button: "Get funded",
