--- a/landing-pages/insight-scaling.yml
+++ b/landing-pages/insight-scaling.yml
@@ -40,7 +40,7 @@ first:
         secondLine: "For Your Business",
       },
 
-    description: "We're excited to partner with Outfund to offer clients fast and flexible funding. 
+    description: "We're excited to partner with Outfund to offer clients fast and flexible funding." 
 ",
 
     button: "Get funded",
