--- a/landing-pages/ravio.yml
+++ b/landing-pages/ravio.yml
@@ -1,4 +1,4 @@
-# Slug value will be used for URL, eg: www.revenue.finance/ravio
+# Slug value will be used for URL, eg: www.revenue.finance/template
 # As a convention, name the file the same as the slug, eg: template.yml
 slug: ravio
 
@@ -11,13 +11,13 @@ partnerLogo: "outfund-logo-dark"
 partnerLogoCard: "outfund-logo-light"
 
 colors: {
-    theme: "#1A65BA",
+    theme: "#00A3D7",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "" },
+    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "#00A3D7" },
     font:
       {
         heading: "#0C2542",
@@ -25,18 +25,21 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#1A65BA", text: "#fff" },
-    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
-    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
+    button: { bg: "#00A3D7", text: "#fff" },
+    iconSection: { icon: "#00A3D7", bg: "#F2F6FA" },
+    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
   }
 
 # Content
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Your Business" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
-    description: "Outfund provide fast and flexible funding from £10k-£10mto allow you to scale without giving away equity",
+    description: "As fulfillment experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from $10K to $3M.",
 
     button: "Get funded",
   }
@@ -80,19 +83,19 @@ fourth:
 
 fifth:
   {
-    title: "Ravio Offer",
-    description: "As a Ravio customer, we can offer you 10% off your first Outfund facilty",
-    statement: "",
+    title: "What We Do",
+    description: "Outfund can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantee.",
+    statement: "Outfund offers a new way to help you fund your online brand.",
   }
 
 sixth:
   {
-    title: "We fund businesses who:",
+    title: "We fund online businesses who:",
     list:
       [
-        "",
+        "Sell products online",
         "Have been trading for 6 months +",
-        "Earn £10K+ monthly revenue",
+        "Earn $10K+ monthly revenue",
       ],
     button: "Get funded",
   }
