--- a/landing-pages/payfit.yml
+++ b/landing-pages/payfit.yml
@@ -12,13 +12,13 @@ partnerLogoCard: "outfund-logo-light"
 logoHeight: "64px"
 
 colors: {
-    theme: "#2E8DE4",
+    theme: "#00A3D7",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#000000", font: "#F2F6FA", elements: "#000000" },
+    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "#00A3D7" },
     font:
       {
         heading: "#0C2542",
@@ -26,9 +26,9 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-    button: { bg: "#000000", text: "#fff" },
-    iconSection: { icon: "#000000", bg: "#F2F6FA" },
-    darkSection: { bg: "#000000", button: { bg: "#000000", text: "#FFF" } },
+     button: { bg: "#00A3D7", text: "#fff" },
+    iconSection: { icon: "#00A3D7", bg: "#F2F6FA" },
+    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
   }
 
 # Content
