--- a/landing-pages/payfit.yml
+++ b/landing-pages/payfit.yml
@@ -7,18 +7,17 @@ published: true
 
 # Partner logo in SVG format, please just add the naem not the ".svg" file extension
 # Add the logo to the "companyLogos" folder
-partnerLogo: "outfund-logo-light"
+partnerLogo: "outfund-logo-dark"
 partnerLogoCard: "outfund-logo-light"
-logoHeight: "64px"
 
 colors: {
-    theme: "#00A3D7",
+    theme: "#1A65BA",
     page: "#fff",
 
     navbarBg: "", # If nothing present, page color will be used
 
     # Card colors
-    card: { bg: "#0D2C4F", font: "#F2F6FA", elements: "#00A3D7" },
+    card: { bg: "#1A65BA", font: "#F2F6FA", elements: "#000000" },
     font:
       {
         heading: "#0C2542",
@@ -26,20 +25,21 @@ colors: {
         body: "#1C3654",
         inverseBody: "#F2F6FA",
       },
-     button: { bg: "#00A3D7", text: "#fff" },
-    iconSection: { icon: "#00A3D7", bg: "#F2F6FA" },
-    darkSection: { bg: "#0D2C4F", button: { bg: "#00A3D7", text: "" } },
+    button: { bg: "#1A65BA", text: "#fff" },
+    iconSection: { icon: "#1A65BA", bg: "#F2F6FA" },
+    darkSection: { bg: "#1A65BA", button: { bg: "#000000", text: "#FFF" } },
   }
 
 # Content
 first:
   {
     title:
-      { firstLine: "Revenue Based Finance", secondLine: "For Your Business" },
+      {
+        firstLine: "Revenue Based Finance",
+        secondLine: "For eCommerce Businesses",
+      },
 
-    description:
-      "Outfund provide fast and flexible funding from £10k-£10m to allow you to scale without giving away equity.
-      ",
+    description: "As funding experts, we know that having the capital to pay for inventory and marketing is a huge barrier to growth for any brand. Outfund offers a new way to help you fund your online business with funding from £10K to £10M.",
 
     button: "Get funded",
   }
@@ -84,14 +84,17 @@ fourth:
 fifth:
   {
     title: "What We Do",
-    description: "Outfund can help your business to achieve its growth potential. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
-    statement: "",
+    description: "Outfund can help your business to achieve its growth potential. Don’t be held back by limited inventory, or a small marketing budget. Revenue based financing is a fast, flexible and fair way to supercharge your growth, without giving up equity and with no personal guarantees required.",
+    statement: "Outfund offers a new way to help you fund your growing brand.",
   }
 
 sixth:
   {
-    title: "We fund businesses who:",
+    title: "We fund online businesses who:",
     list:
-      ["", "Have been trading for 6 months +", "Earn £10K+ monthly revenue"],
+      [
+        "Have been trading for 6 months +",
+        "Earn £10K+ monthly revenue",
+      ],
     button: "Get funded",
   }
